Move from console.log to debug

--- a/packages/ia-prototype-apps/apps/details-react/index.html
+++ b/packages/ia-prototype-apps/apps/details-react/index.html
@@ -12,6 +12,8 @@
     <script src="https://archive.org/bookreader/BookReaderHelpers.js"></script>
     <script src="https://archive.org/bookreader/LendingFlow.js"></script>
     <script src="https://archive.org/bookreader/BookReaderJSIA.js"></script>
+    <-- turn on debugging, comment out for no debugging-->
+    <script type="text/javascript">localStorage.debug = "ia-components:* ia-js-client:*";</script>
   </head>
   <body class="navia ia-module tiles responsive jwaudio responsive-playing">
     <div id="root"></div>
