--- a/packages/scrubber-bar/demo/index.html
+++ b/packages/scrubber-bar/demo/index.html
@@ -13,14 +13,12 @@
 
   <script type="module">
     import { html, render } from 'lit-html';
-    import '../scrubber-bar.js';
+    import '../index.js';
 
     const title = 'Hello owc World!';
     render(
       html`
-        <scrubber-bar .title=${title}>
-          some more light-dom
-        </scrubber-bar>
+        <scrubber-bar></scrubber-bar>
       `,
       document.querySelector('#demo')
     );
