Update imports and cleanup configuration

--- a/packages/scrubber-bar/demo/index.html
+++ b/packages/scrubber-bar/demo/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-GB">
+<html>
 <head>
   <meta charset="utf-8">
   <style>
@@ -13,9 +13,8 @@
 
   <script type="module">
     import { html, render } from 'lit-html';
-    import '../index.js';
+    import '../scrubber-bar.js';
 
-    const title = 'Hello owc World!';
     render(
       html`
         <scrubber-bar></scrubber-bar>
