Add some waveform progress tests

--- a/packages/waveform-progress/demo/index.html
+++ b/packages/waveform-progress/demo/index.html
@@ -29,6 +29,7 @@
         <waveform-progress
           id="waveform"
           waveformUrl='./waveform.png'
+          interactive=true
           percentComplete=${defaultPercent}
           @valuechange=${userDraggedWaveform}
         ></waveform-progress>
