Add StoryBook demo of waveform scrubber

--- a/packages/waveform-progress/demo/index.html
+++ b/packages/waveform-progress/demo/index.html
@@ -15,6 +15,7 @@
     waveform-progress {
       height: 10rem;
       width: 100%;
+      --fillColor: purple;
       --zoneOfSilenceColor: orange;
     }
   </style>
