--- a/packages/audio-element/demo/index.html
+++ b/packages/audio-element/demo/index.html
@@ -40,14 +40,37 @@
           sources=${JSON.stringify(arrowSources)}
         ></audio-element>
 
-        <button @click=${playArrow}>Play Arrow</button>
+        <div>
+          <button @click=${play}>Play</button>
+          <button @click=${pause}>Pause</button>
+        </div>
 
-        <button @click=${playSpring}>Play Spring</button>
+        <div>
+          <button @click=${playArrow}>Play Arrow</button>
+          <button @click=${playSpring}>Play Spring</button>
+          <button @click=${playVoiceOfAmerica}>Play Voice of America</button>
+        </div>
 
-        <button @click=${changeVolume} id="volume-button">Volume 1.0</button>
-      `,
+        <div>
+          Volume: <input type="range" min="0" max="100" value="100" step="1" @input=${changeVolume}> <span id="volume-value">100</span>%
+        </div>
+
+        <div>
+          Playback Rate: <input type="range" min="0.1" max="3" value="1" step="0.001" @input=${changePlaybackRate}> <span id="playback-rate">1</span>x
+        </div>
+        `,
       document.querySelector('#demo')
     );
+
+    function play() {
+      const audioElement = document.querySelector('audio-element');
+      audioElement.play()
+    }
+
+    function pause() {
+      const audioElement = document.querySelector('audio-element');
+      audioElement.pause()
+    }
 
     function playArrow() {
       const audioElement = document.querySelector('audio-element');
@@ -63,12 +86,28 @@
       audioElement.play();
     }
 
-    function changeVolume() {
+    function playVoiceOfAmerica() {
       const audioElement = document.querySelector('audio-element');
-      const volumeButton = document.getElementById('volume-button');
-      const volume = audioElement.volume === 0 ? 1 : audioElement.volume - 0.25;
-      audioElement.volume = volume;
-      volumeButton.innerText = `Volume ${volume}`;
+      const voaMp3 = new AudioSource(
+        'http://archive.org/download/VOA_Global_English_20170803_190000/VOA_Global_English_20170803_190000.mp3',
+        'audio/mpeg');
+      audioElement.sources = [voaMp3];
+      audioElement.load();
+      audioElement.play();
+    }
+
+    function changeVolume(e) {
+      const audioElement = document.querySelector('audio-element');
+      const volumeValue = document.getElementById('volume-value');
+      audioElement.volume = e.target.value / 100;
+      volumeValue.innerText = Math.round(e.target.value);
+    }
+
+    function changePlaybackRate(e) {
+      const audioElement = document.querySelector('audio-element');
+      const playbackRate = document.getElementById('playback-rate');
+      audioElement.playbackRate = e.target.value;
+      playbackRate.innerText = e.target.value;
     }
 </script>
 </body>
