--- a/packages/playback-controls/demo/index.html
+++ b/packages/playback-controls/demo/index.html
@@ -25,7 +25,7 @@
 
   <script type="module">
     import { html, render } from 'lit-html';
-    import '../playback-controls.js';
+    import '../index.js';
 
     render(
       html`
