Add TypeScript declarations file and update imports
This adds a declarations file so other TypeScript projects can easily import the Scrubber Bar, as well as cleaning up some imports

--- a/packages/scrubber-bar/demo/index.html
+++ b/packages/scrubber-bar/demo/index.html
@@ -13,7 +13,7 @@
 
   <script type="module">
     import { html, render } from 'lit-html';
-    import '../scrubber-bar.js';
+    import '../index.js';
 
     render(
       html`
