--- a/packages/scrubber-bar/demo/index.html
+++ b/packages/scrubber-bar/demo/index.html
@@ -4,7 +4,15 @@
   <meta charset="utf-8">
   <style>
     body {
-      background: #fafafa;
+      background: black;
+      color: white;
+    }
+
+    scrubber-bar {
+      --trackFillColor: rgba(50, 114, 182, 1);
+      --trackColor: rgba(255, 255, 255, 0.2);
+      --markerHeightExpanded: 25px;
+      --markerHeightCollapsed: 10px;
     }
   </style>
 </head>
@@ -17,10 +25,19 @@
 
     render(
       html`
-        <scrubber-bar></scrubber-bar>
+        <scrubber-bar
+          sectionMarkerPercentages='[0, 10, 11, 25, 30, 50, 75, 100]'
+          value='37'
+          @valuechange=${valueChange}>
+        </scrubber-bar>
+        <span class="value">0</span>%
       `,
       document.querySelector('#demo')
     );
+
+    function valueChange(e) {
+      document.querySelector('.value').innerHTML = e.detail.value;
+    }
   </script>
 </body>
 </html>
