--- a/packages/radio-player/demo/index.html
+++ b/packages/radio-player/demo/index.html
@@ -38,7 +38,7 @@
 
   <script type="module">
     import { html, render } from 'lit-html';
-    import '../lib/demo/radio-player-controller.js'
+    import '../lib/demo/radio-player-controller.js';
 
     render(
       html`
