--- a/packages/radio-player/demo/index.html
+++ b/packages/radio-player/demo/index.html
@@ -34,7 +34,8 @@
   </style>
 </head>
 <body>
-  <div id="demo"></div>
+  <div id="demo">
+  </div>
 
   <script type="module">
     import { html, render } from 'lit-html';
