Abstracts baseUrl and waybackUrl

--- a/packages/mobile-top-nav/index.html
+++ b/packages/mobile-top-nav/index.html
@@ -25,6 +25,6 @@
   </head>
 
   <body>
-    <topnav-element></topnav-element>
+    <topnav-element config='{ "baseUrl": "archive.org", "waybackUrl": "web.archive.org", "username": "shaneriley" }'></topnav-element>
   </body>
 </html>
