--- a/packages/example-webcomponent/index.html
+++ b/packages/example-webcomponent/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="src/webcomponent.js"></script>
+    <script type="module" src="src/example-webcomponent.js"></script>
     <title>Hello Component</title>
     <style>
       html {
