--- a/packages/ia-activity-indicator/demo/index.html
+++ b/packages/ia-activity-indicator/demo/index.html
@@ -9,6 +9,9 @@
       font-family: sans-serif;
     }
     ia-activity-indicator {
+      width: 50px;
+      height: 50px;
+      display: inline-block;
       --activityIndicatorLoadingDotColor: green;
       --activityIndicatorCheckmarkColor: green;
       --activityIndicatorCompletedRingColor: purple;
